--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ form {
     border-radius: 5px;
     margin-top: 30px;
     padding: 20px;
-    width: 50%;
 }
 
 input {
@@ -34,6 +33,30 @@ input {
 
 /* Gifs */
 
-p {
-    padding-top: 10px;
+.btn-success {
+    width: 40%;
+}
+
+.card {
+    height: 95%;
+    margin: 15px 0px;
+}
+
+.gif-image {
+    padding: 15px;
+    padding-bottom: 50px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.download {
+    bottom: 10px;
+    left: 20px;
+    position: absolute;
+}
+
+.favorite {
+    bottom: 10px;
+    right: 20px;
+    position: absolute;
 }
